--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "vigour flavoured events",
   "main": "lib/index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "node test | tap-difflet"
   },
   "repository": {
     "type": "git",
@@ -16,6 +16,10 @@
   ],
   "dependencies": {
     "vigour-util": "^1.0.1"
+  },
+  "devDependencies": {
+    "tape": "^4.5.1",
+    "tap-difflet": "0.4.0"
   },
   "author": "jim de beer",
   "license": "ISC",
